fix the emplacement of the labels in the align block

--- a/galite-core/src/main/resources/META-INF/resources/frontend/styles/galite/label.css
+++ b/galite-core/src/main/resources/META-INF/resources/frontend/styles/galite/label.css
@@ -65,3 +65,13 @@
     color: #009bd4;
     padding-left: 2px;
 }
+
+.show {
+    visibility: visible;
+    background: #d9f0f8;
+    margin: 1px;
+}
+
+.hide {
+    visibility: hidden;
+}
